--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link link rel="stylesheet" href="/style.css" />
     <title>Россия</title>
-</head>
-<body>
-    <header>
-        <h2>Путешествия по России</h2>
+  </head>
+  <body>
+    <div class="page line">
+      <header class="header line">
+        <img class="" src="./images/__logo.png" alt="Россия" />
+        <div class="header__lang-link">
+          <img
+            class="header__lang-link_ru"
+            src="./images/__lang-link_ru.svg"
+            alt="Русский"
+            width="30px"
+          />    
 
-
-
-
-
-    </header>
-    
-</body>
+          <img
+            class="header__lang-link_en"
+            src="./images/__lang-link.svg"
+            alt="Английский"
+            width="29px"
+          />
+        </div>
+      </header>
+      <div class="lead line">
+        <h2 class="lead__title line">Путешествия по России</h2>
+      </div>
+    </div>
+  </body>
 </html>
