--- a/index.html
+++ b/index.html
@@ -288,10 +288,7 @@
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
             class="cover__link"
           >
-            <h2 class="cover__title">
-              До Байкала <br />
-              «на собаках»
-            </h2>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
             <h4 class="cover__subtitle">
               По мотивам учебной темы о Транссибе — путешествие от столицы до
               Байкала на электричках.
