--- a/index.html
+++ b/index.html
@@ -4,35 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/vendors/fonts/fonts.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Россия</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img class="header__logo" src="./images/__logo.png" alt="Россия" />
+        <img class="header__logo" src="./images/__logo.svg" alt="Россия" />
         <div class="header__lang-links">
-          <a href="" class="header__lang-link">RU</a>
-          <a href="" class="header__lang-link">EN</a>
+          <a href="" class="header__lang-link header__lang-link_underlined"
+            >Ru</a
+          >
+          <a href="" class="header__lang-link">En</a>
         </div>
       </header>
       <main class="content">
         <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
-          <h3 class="lead__subtitle">
+          <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
-          </h3>
+          </p>
           <img
             class="lead__image"
             src="./images/__image-window.png"
             alt="В поезде"
           />
-          <div class="lead__caption">ваша полка — верхняя</div>
+          <p class="lead__caption">ваша полка — верхняя</p>
         </section>
 
         <section class="intro">
-          <h3 class="intro__title">Чего мы там не видели?</h3>
+          <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
             36% планируют провести отпуск в родной стране. Мол, чего мы тут,
@@ -45,32 +46,27 @@
             стране. Мы выбрали и описали некоторые интересные места, достойные
             вашего отпуска.
           </p>
-          <div class="intro__list">
-            <ul>
-              <li>
-                <p class="intro__item">Часовых поясов 11</p>
-              </li>
-              <li>
-                <p class="intro__item">
-                  Объектов природного наследия ЮНЕСКО 12
-                </p>
-              </li>
-              <li>
-                <p class="intro__item">
-                  Объектов культурного наследия ЮНЕСКО 16
-                </p>
-              </li>
-              <li>
-                <p class="intro__item">Природных заповедников 105</p>
-              </li>
-              <li>
-                <p class="intro__item">Аэропортов 241</p>
-              </li>
-            </ul>
-          </div>
+          <ul class="intro__list">
+            <li class="intro__item">
+              Часовых поясов <span class="intro__span">11</span>
+            </li>
+            <li class="intro__item">
+              Объектов природного наследия ЮНЕСКО
+              <span class="intro__span">12</span>
+            </li>
+            <li class="intro__item">
+              Объектов культурного наследия ЮНЕСКО
+              <span class="intro__span">16</span>
+            </li>
+            <li class="intro__item">
+              Природных заповедников <span class="intro__span">241</span>
+            </li>
+            <li class="intro__item">
+              Аэропортов <span class="intro__span">241</span>
+            </li>
+          </ul>
         </section>
-
-        <div class="photo">
+        <section class="photo">
           <img
             class="photo__image"
             src="images/photo/__item.png"
@@ -118,19 +114,17 @@
             src="images/photo/__item_10.png"
             alt="Зимний Байкал"
           />
-
           <img
             class="photo__image"
             src="images/photo/__item_11.png"
             alt="Природный парк Ергаки"
           />
-        </div>
-
+        </section>
         <section class="places">
           <div class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
-              <p class="place__url">URL</p>
+              <p class="place__url">url</p>
               <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
             </div>
             <img
@@ -138,7 +132,6 @@
               src="./images/places/__kosa.png"
               alt="Куршская коса"
             />
-
             <div class="place__text">
               <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
@@ -159,7 +152,7 @@
           <div class="place">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
-              <p class="place__url">URL</p>
+              <p class="place__url">url</p>
               <a
                 class="place__link"
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
@@ -171,7 +164,6 @@
               src="./images/places/__kolskiy.png"
               alt="Кольский"
             />
-
             <div class="place__text">
               <p class="place__paragraph">
                 Почти весь полуостров находится за Полярным кругом. Саамская
@@ -192,7 +184,7 @@
           <div class="place">
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
-              <p class="place__url">URL</p>
+              <p class="place__url">url</p>
               <a
                 class="place__link"
                 href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
@@ -204,7 +196,6 @@
               src="./images/places/__altai.png"
               alt="Алтай"
             />
-
             <div class="place__text">
               <p class="place__paragraph">
                 Алтай — одно из красивейших мест в России. В первую очередь
@@ -225,7 +216,7 @@
           <div class="place">
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
-              <p class="place__url">URL</p>
+              <p class="place__url">url</p>
               <a class="place__link" href="https://vk.com/baikalmile"
                 >https://vk.com/baikalmile</a
               >
@@ -235,7 +226,6 @@
               src="./images/places/__baykal.png"
               alt="Байкал"
             />
-
             <div class="place__text">
               <p class="place__paragraph">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -255,7 +245,7 @@
           <div class="place">
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
-              <p class="place__url">URL</p>
+              <p class="place__url">url</p>
 
               <a href="http://vodlozero.ru" class="place__link"
                 >http://vodlozero.ru</a
@@ -266,7 +256,6 @@
               src="./images/places/__kareliya.png"
               alt="Карелия"
             />
-
             <div class="place__text">
               <p class="place__paragraph">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
@@ -282,11 +271,11 @@
             </div>
           </div>
         </section>
-
         <section class="cover">
           <a
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
-            class="cover__link"
+            class="cover__link cover__link_overlay"
+            target="blank"
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <h4 class="cover__subtitle">
@@ -296,20 +285,33 @@
           >
         </section>
       </main>
-
       <footer class="footer">
-        <div class="footer__links">
-          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-          <a class="footer__link" href="https://calendar.yandex.ru"
-            >Календарь</a
-          >
-          <a class="footer__link" href="https://travel.yandex.ru"
-            >Путешествия</a
-          >
-        </div>
-        <a class="footer__copyright">© 2021. Андрей Бордуков</a>
+        <nav>
+          <ul class="footer__links">
+            <li>
+              <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+            </li>
+            <li>
+              <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+            </li>
+            <li>
+              <a class="footer__link" href="https://rasp.yandex.ru">
+                Расписание
+              </a>
+            </li>
+            <li>
+              <a class="footer__link" href="https://calendar.yandex.ru">
+                Календарь
+              </a>
+            </li>
+            <li>
+              <a class="footer__link" href="https://travel.yandex.ru">
+                Путешествия
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <p class="footer__copyright">© 2021. Андрей Бордуков</p>
       </footer>
     </div>
   </body>
